# cart-pole-rs

./: .gitignore  Cargo.toml  Makefile  README.md  export_model.py  model_traced.pt  requirements.txt  shell.nix
benchmark/: .gitignore  bench.sh  targets.txt
inference-web/: Cargo.toml
inference-web/benches/: my_benchmark.rs
inference-web/src/: lib.rs  main.rs
